--- a/src/scss/globals/_header.scss
+++ b/src/scss/globals/_header.scss
@@ -27,6 +27,7 @@
             right: 1em;
             width: 1.25rem;
             height: 1.25rem;
+            color: var(--color-green);
             transform: translateY(-50%);
 
             svg {
