--- a/src/scss/templates/_article.scss
+++ b/src/scss/templates/_article.scss
@@ -55,6 +55,7 @@
         + .articleGallery,
         + .articleImage,
         + .articleVideo,
+        + .articleMap,
         + .articleLinks {
             margin-top: var(--spacer-y-x3);
         }
@@ -74,6 +75,7 @@
         + .articleGallery,
         + .articleImage,
         + .articleVideo,
+        + .articleMap,
         + .articleLinks {
             margin-top: var(--spacer-y-x3);
         }
@@ -158,6 +160,7 @@
     &Gallery,
     &Image,
     &Video,
+    &Map,
     &Links {
         overflow: hidden;
         border-radius: 0.25rem;
@@ -172,6 +175,7 @@
         + .articleGallery,
         + .articleImage,
         + .articleVideo,
+        + .articleMap,
         + .articleLinks {
             margin-top: var(--spacer-y-x2);
         }
@@ -302,6 +306,19 @@
                 opacity: 0;
                 visibility: hidden;
                 pointer-events: none;
+            }
+        }
+    }
+
+    &Map {
+
+        iframe {
+            width: 100%;
+            height: 320px;
+            outline: none;
+
+            @include sm-breakpoint {
+                height: 480px;
             }
         }
     }
