--- a/src/scss/templates/_stay.scss
+++ b/src/scss/templates/_stay.scss
@@ -142,11 +142,18 @@
 }
 
 .amenitiesList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    &Container {
+    &Collapse {
         position: relative;
+        display: flex;
+        flex-direction: column;
         overflow: hidden;
+        width: 100%;
         height: 300px;
+        transition: height 0.6s ease;
 
         &::after {
             content: '';
@@ -158,7 +165,12 @@
             height: 100px;
             background: linear-gradient(180deg, rgba(240,237,234,0) 0%, rgba(240,237,234,1) 100%);
             pointer-events: none;
+            transition: opacity 0.6s ease;
         }
+    }
+
+    &Container {
+        flex-shrink: 0;
     }
 
     &Item {
@@ -174,11 +186,11 @@
         }
 
         .icon {
+            flex-shrink: 0;
             display: inline-flex;
             align-items: center;
             width: 1.25rem;
             height: 1.5rem;
-            background: red;
             
             svg {
                 width: 1.25rem;
@@ -187,15 +199,34 @@
         }
     }
 
+    &Btn {
+        padding-right: calc(var(--btn-height) * 0.4);
+
+        svg {
+            width: 1.5em;
+            height: 1.5em;
+            transform: translateX(0.2em) rotate(0deg);
+            transition: transform 0.4s ease;
+        }
+    }
+
     &.is-open {
 
         .amenitiesList { 
 
-            &Container {
-                height: auto;
+            &Collapse {
 
                 &::after {
                     opacity: 0;
+                }
+            }
+
+            &Btn {
+        
+                svg {
+                    width: 1.5em;
+                    height: 1.5em;
+                    transform: translateX(0.2em) rotate(180deg);
                 }
             }
         }
