Active state function added to pageNav links

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1489,6 +1489,7 @@ h6 + .accordionContainer {
   --btn-height: 2.5rem;
   --btn-color: var(--color-white);
   --btn-background: var(--color-green);
+  position: relative;
   flex-shrink: 0;
   display: inline-flex;
   justify-content: center;
@@ -1521,13 +1522,30 @@ h6 + .accordionContainer {
   border: 1px solid var(--btn-color);
   background: transparent;
 }
-.btnSecondary.mixitup-control-active {
+.btnSecondary.active, .btnSecondary.mixitup-control-active {
   border: 1px solid currentColor;
   background: transparent;
 }
 .btnBare {
   --btn-color: var(--color-green);
   --btn-background: transparent;
+}
+.btnBare::after {
+  content: "";
+  position: absolute;
+  left: calc(var(--btn-height) * 0.5);
+  right: calc(var(--btn-height) * 0.5);
+  bottom: calc(var(--btn-height) * 0.5 - 1em);
+  border-bottom: 1px solid var(--btn-color);
+  transform: scaleX(0);
+  transform-origin: right;
+  will-change: transform;
+  transition: transform 0.3s ease;
+}
+.btnBare.active::after, .btnBare.mixitup-control-active::after {
+  transform: scaleX(1);
+  transform-origin: left;
+  transition: transform 0.3s 0.1s ease;
 }
 .btnStroke {
   color: var(--btn-background);
