--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -20,6 +20,7 @@
 
 // Background colour
 .bg-green { background-color: var(--color-green); color: var(--color-white); }
+.bg-yellow { background-color: var(--color-yellow); color: var(--color-white); }
 
 // Padding
 .px-1 { padding-left: var(--spacer-x); padding-right: var(--spacer-x); }
