--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -56,6 +56,7 @@
 .text-block-30 { max-width: 30em; }
 .text-block-35 { max-width: 35em; }
 .text-block-40 { max-width: 40em; }
+.text-block-50 { max-width: 50em; }
 
 // Overflow
 .overflow-hidden { overflow: hidden; }
