--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3115,6 +3115,93 @@ h6 + .richtext {
   margin-top: 2rem;
 }
 
+.historyContainer {
+  position: relative;
+}
+.historySticky {
+  position: sticky;
+  z-index: 0;
+  top: 0;
+  overflow: hidden;
+  height: 100vh;
+  height: 100svh;
+}
+.historySticky .background {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: var(--color-green);
+}
+.historySticky .background img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.historySticky .left,
+.historySticky .right {
+  position: absolute;
+  top: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: var(--gutter-x);
+  width: 30%;
+  height: 100%;
+}
+.historySticky .left img,
+.historySticky .right img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 4px;
+}
+.historySticky .left {
+  left: 0;
+  padding-right: var(--gutter-x);
+}
+.historySticky .left img:nth-child(1) {
+  grid-column: 1/span 2;
+  grid-row: 1/span 3;
+}
+.historySticky .left img:nth-child(2) {
+  grid-column: 1/span 1;
+  grid-row: 4/span 2;
+}
+.historySticky .left img:nth-child(3) {
+  grid-column: 2/span 1;
+  grid-row: 4/span 2;
+}
+.historySticky .right {
+  right: 0;
+  padding-left: var(--gutter-x);
+}
+.historySticky .right img:nth-child(1) {
+  grid-column: 1/span 1;
+  grid-row: 1/span 2;
+}
+.historySticky .right img:nth-child(2) {
+  grid-column: 2/span 1;
+  grid-row: 1/span 2;
+}
+.historySticky .right img:nth-child(3) {
+  grid-column: 1/span 2;
+  grid-row: 3/span 3;
+}
+.historyContent {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  color: var(--color-white);
+}
+
 .articleDetails {
   display: flex;
   gap: 1em;
