--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -5,7 +5,7 @@
 // Font size
 .font-size-sm { font-size: var(--font-size-sm); }
 .font-size-base { font-size: var(--font-size-base); }
-.font-size-md {font-size: var(--font-size-md); }
+.font-size-md {font-size: var(--font-size-md); line-height: 1.3; }
 .font-size-lg { font-size: var(--font-size-lg); line-height: 1; }
 .font-size-xl { font-size: var(--font-size-xl); line-height: 1; }
 .font-size-2xl { font-size: var(--font-size-2xl); line-height: 1; }
