Booking search form markup added

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -55,6 +55,7 @@
 @import "~swiper/swiper-bundle.css";
 @import "~accordion-js/dist/accordion.min.css";
 @import "~@fancyapps/ui/dist/fancybox/fancybox.css";
+@import '~flatpickr/dist/flatpickr';
 
 // Custom styles
 @import "globals/index";
